style.css
/*FONT*/
@font-face {
  font-family: "orbitron";
  font-style: normal;
  font-weight: normal;
  src: url("fonts/Orbitron-Regular.ttf") format("truetype");
}


/*GLOBAL STYLES*/
body,
header,
ul,
li,
a,
h1,
h2 {
  list-style: none;
  margin: 0;
  padding: 0;
  text-decoration: none;
}

a:link {
  color: #333;
}

a:visited {
  color: #333;
}

a:hover {
  color: #097F43;
}

a:active {
  color: #fff;
}

.page-container {
  background: #fff1df;
  color: #333;
  display: flex;
  flex-flow: column nowrap;
  font-family: "orbitron";
  height: 100vh;
}


/*DRY pricipal*/
.text-center {
  text-align: center;
}

.standout-words {
  font-weight: 700;
}

.hr-rule{
  margin-top: 64px;
}


/*HEADER*/
header {
  align-items: center;
  display: flex;
  height: 12%;
}

.site-title {
  color: #097f43;
  flex-grow: 2;
}

.main-menu {
  flex-grow: 1;
}

.main-menu ul li a {
  font-size: .9em;
  animation: font .23s;
}


/*BODY*/
main {
  background: #333;
  height: 80%;
}

.game-wrapper {
  align-items: center;
  display: flex;
  flex-flow: column wrap;
  height: calc(100% - 16px);
  justify-content: center;
  padding: 8px;
}


/*FOOTER*/

footer {
  font-size: .8em;
  height: 8%;
}


/*GAME*/
.background{
  background: rgb(52, 166, 251);
  border-spacing: 0;
  table-layout: fixed;
}

.background td {
  padding: 0;
}

.lava{
  background: rgb(255, 100, 100);
}

.wall {
  background: white;
}

.actor {
  position: absolute;
}

.coin {
  background: rgb(241, 229, 89);
}

.player {
  background: rgb(64, 64, 64);
}

/*Win or Loose*/
.lost .player {
  background: rgb(160, 64, 64);
}

.won .player {
  box-shadow: -4px -7px 8px white, 4px -7px 8px white;
}

.game {
  max-height: 100%;
  max-width: 100%;
  overflow: hidden;
  position: relative;
}


/*HOW TO PLAY MODAL*/
.ht-modal {
  background-color: rgb(9, 127, 67);
  background-color: rgba(9, 127, 67,.6);
  display: none;
  height: 100%;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 66;
}

.ht-modal-content {
  background-color: #fff1df;
  border: 1px solid #888;
  margin: 12% auto;
  max-width: 572px;
  padding: 20px 10px;
  position: relative;
  width: 88%;
}

.close-modal-btn {
  font-size: 28px;
  font-weight: bold;
  position: absolute;
  top: 0;
  right: 12px;
}

.close-modal-btn:hover,
.th-close-modal:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.ht-modal-body {
  letter-spacing: 1px;
  padding-top: 16px;
}

.ht-modal-body p {
  margin: 28px 0;
}


/*MEDIA QUERIES*/
@media (min-width: 600px) {
  .main-menu ul li a {
    font-size: 1em;
  }
}

@media (min-width: 900px) {
  .ht-modal-content {
    margin: 10% auto;
  }
}

@media (min-width: 1200px) {
  .ht-modal-content {
    margin: 6% auto;
  }
}

